@startuml GhostEscape_UML_Class_Diagram
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0

title GhostEscape Game - UML Class Diagram

' ============================================================================
' 基础定义
' ============================================================================

namespace core {
    enum Anchor <<enumeration>> {
        NONE
        TOP_LEFT
        TOP_CENTER
        TOP_RIGHT
        MIDDLE_LEFT
        MIDDLE_CENTER
        MIDDLE_RIGHT
        BOTTOM_LEFT
        BOTTOM_CENTER
        BOTTOM_RIGHT
    }
}

' ============================================================================
' 核心基类 - Object 层次结构
' ============================================================================

class Object {
    -m_game: Game&
    -m_children: vector<unique_ptr<Object>>
    -m_is_activive: bool
    -m_need_remove: bool
    +init()
    +handleEvents(event: SDL_Event)
    +update(delta_time: float)
    +render()
    +clean()
    +addObject(child: unique_ptr<Object>)
    +removeObject(child: Object*)
    +getActiveState(): bool
    +setActive(is_active: bool)
}

class ObjectAffiliate {
    -m_parent: ObjectScreen*
    -m_offset: vec2
    -m_size: vec2
    -m_anchor: Anchor
    +getParent(): ObjectScreen*
    +getOffset(): vec2
    +getSize(): vec2
    +getAnchor(): Anchor
    +setParent(screen: ObjectScreen*)
    +setOffset(offset: vec2)
    +setSize(size: vec2)
    +setAnchor(anchor: Anchor)
    +setScale(scale: float)
    +setOffsetByAnchor(anchor: Anchor)
}

class ObjectScreen {
    -m_render_postion: vec2
    +getRenderPosition(): vec2
    +getPosition(): vec2 <<virtual>>
    +setRenderPosition(render_position: vec2)
}

class ObjectWorld {
    -m_position: vec2
    -m_collider: Collider*
    +update(delta_time: float)
    +getPosition(): vec2 <<override>>
    +getCollider(): Collider*
    +setPosition(position: vec2)
    +setRenderPosition(render_position: vec2) <<override>>
    +setCollider(collider: Collider*)
}

class Scene {
    -m_world_size: vec2
    -m_camera_position: vec2
    -m_children_screen: vector<unique_ptr<ObjectScreen>>
    -m_children_world: vector<unique_ptr<ObjectWorld>>
    +init()
    +handleEvents(event: SDL_Event)
    +update(delta_time: float)
    +render()
    +clean()
    +worldToScreen(world_position: vec2): vec2
    +screenToWorld(screen_position: vec2): vec2
    +addObjectScreen(child: unique_ptr<ObjectScreen>)
    +addObjectWorld(child: unique_ptr<ObjectWorld>)
    +removeObjectScreen(child: ObjectScreen*)
    +removeObjectWorld(child: ObjectWorld*)
    +getWorldSize(): vec2
    +getCameraPosition(): vec2
    +setWorldSize(world_size: vec2)
    +setCameraPosition(camera_position: vec2)
}

' ============================================================================
' Entity 层次结构
' ============================================================================

class Entity {
    -m_states: States*
    -m_velocity: vec2
    -m_max_speed: float
    +move(delta_time: float)
    +takeDamage(damage: float)
    +isAlive(): bool
    +getStates(): States*
    +getVelocity(): vec2
    +getMaxSpeed(): float
    +setStates(states: States*)
    +setVelocity(velocity: vec2)
    +setMaxSpeed(max_speed: float)
}

' ============================================================================
' 组件类
' ============================================================================

class Sprite {
    -m_texture: Texture
    -m_is_finished: bool
    +render()
    +addSpriteToObjects(): Sprite* <<static>>
    +getTexture(): Texture
    +getFlip(): bool
    +getAngle(): float
    +getIsFinished(): bool
    +setTexture(texture: Texture)
    +setFlip(is_flip: bool)
    +setAngle(angle: float)
    +setIsFinished(is_finished: bool)
}

struct Texture {
    +texture: SDL_Texture*
    +src_rect: SDL_FRect
    +angle: float
    +is_flip: bool
}

class SpriteAnim {
    -m_current_frame: int
    -m_total_frames: int
    -m_fps: int
    -m_frame_interval: float
    -m_frame_timer: float
    -m_is_loop: bool
    +update(delta_time: float)
    +setTexture(texture: Texture) <<override>>
    +addSpriteAnimToObjects(): SpriteAnim* <<static>>
    +getCurrentFrame(): int
    +getTotalFrames(): int
    +getFPS(): int
    +getFrameTimer(): float
    +getIsLoop(): bool
    +setCurrentFrame(frame: int)
    +setTotalFrames(frames: int)
    +setFPS(fps: int)
    +setFrameTimer(timer: float)
    +setIsLoop(is_loop: bool)
}

class Collider {
    -m_type: Type
    +render()
    +addCollider(): Collider* <<static>>
    +isColliding(other: Collider*): bool
    +getType(): Type
    +setType(type: Type)

    enum Type {
        CIRCLE
        RECTANGLE
    }
}

' ============================================================================
' 状态系统
' ============================================================================

class States {
    -m_parent: Entity*
    -m_health: float
    -m_max_health: float
    -m_mana: float
    -m_max_mana: float
    -m_mana_regen: float
    -m_damage: float
    -m_is_alive: bool
    -m_invincibility_duration: float
    -m_invincibility_timer: float
    -m_is_invincible: bool
    +update(delta_time: float)
    +canUseMana(mana_cost: float): bool
    +useMana(mana_cost: float)
    +regenMana(delta_time: float)
    +takeDamage(damage: float)
    +addStates(): States* <<static>>
    +getParent(): Entity*
    +getHealth(): float
    +getMaxHealth(): float
    +getMana(): float
    +getMaxMana(): float
    +getManaRegen(): float
    +getDamage(): float
    +getIsAlive(): bool
    +getInvincibilityDuration(): float
    +getIsInvincible(): bool
}

' ============================================================================
' 实体类
' ============================================================================

class Player {
    -sprite_idle: SpriteAnim*
    -sprite_move: SpriteAnim*
    -m_is_moving: bool
    +init()
    +handleEvents(event: SDL_Event)
    +update(delta_time: float)
    +render()
    +clean()
    +keyboardControl()
    +syncCamera()
    +checkState()
    +changeState(is_moving: bool)
}

class Enemy {
    -m_target_player: Player*
    -m_current_anim: SpriteAnim*
    -m_anim_normal: SpriteAnim*
    -m_anim_hurt: SpriteAnim*
    -m_anim_die: SpriteAnim*
    -m_current_state: State
    +init()
    +update(delta_time: float)
    +aimTargetPlayer(target_player: Player*)
    +checkState()
    +changeState(new_state: State)
    +remove()
    +attack()
    +getTargetPlayer(): Player*
    +setTargetPlayer(target_player: Player*)

    enum State {
        NORMAL
        HURT
        DEAD
    }
}

class Effect {
    -m_sprite_anim: SpriteAnim*
    -m_next_object: unique_ptr<ObjectWorld>
    +update(delta_time: float)
    +checkFinish()
    +addEffectToObjects(): Effect* <<static>>
    +getSpriteAnim(): SpriteAnim*
    +getNextObject(): ObjectWorld*
    +setSpriteAnim(sprite_anim: SpriteAnim*)
    +setNextObject(next_object: unique_ptr<ObjectWorld>)
}

' ============================================================================
' 场景类
' ============================================================================

class SceneMain {
    -m_player: Player*
    +init()
    +handleEvents(event: SDL_Event)
    +update(delta_time: float)
    +render()
    +clean()
    -renderBackground()
}

' ============================================================================
' 游戏核心
' ============================================================================

class Game <<final>> {
    -Game()
    -m_is_running: bool
    -m_screen_size: vec2
    -m_window: SDL_Window*
    -m_renderer: SDL_Renderer*
    -m_mixer: MIX_Mixer*
    -m_current_scene: Scene*
    -m_asset_store: AssetStore*
    -m_FPS: const Uint64
    -m_frame_delay: Uint64
    -m_delta_time: float
    +getInstance(): Game& <<static>>
    +~Game()
    +init(title: string, width: int, height: int)
    +run()
    -handleEvents()
    -update(delta_time: float)
    -render()
    -clean()
    +drawGrid(top_left: vec2, bottom_right: vec2, grid_width: float, color: SDL_FColor)
    +drawBoundary(top_left: vec2, bottom_right: vec2, boundary_width: float, color: SDL_FColor)
    +renderTexture(texture: Texture, position: vec2, size: vec2)
    +renderColliders(position: vec2, size: vec2, alpha: float)
    +getScreenSize(): vec2
    +getCurrentScene(): Scene*
    +getAssetStore(): AssetStore*
}

class AssetStore {
    -m_renderer: SDL_Renderer*
    -m_mixer: MIX_Mixer*
    -m_textures: unordered_map<string, SDL_Texture*>
    -m_sounds: unordered_map<string, MIX_Audio*>
    -m_fonts: unordered_map<string, TTF_Font*>
    +AssetStore(render: SDL_Renderer*, mixer: MIX_Mixer*)
    +clean()
    +loadImage(file_path: string)
    +loadSound(file_path: string, predecode: bool)
    +loadFont(file_path: string, font_size: float)
    +getImage(file_path: string): SDL_Texture*
    +getSound(file_path: string): MIX_Audio*
    +getFont(file_path: string, font_size: float): TTF_Font*
}

' ============================================================================
' 继承关系
' ============================================================================

Object <|-- ObjectAffiliate
Object <|-- Scene
ObjectAffiliate <|-- ObjectScreen
ObjectAffiliate <|-- Sprite
ObjectAffiliate <|-- Collider
Sprite <|-- SpriteAnim
ObjectScreen <|-- ObjectWorld
ObjectWorld <|-- Entity
Entity <|-- Player
Entity <|-- Enemy
ObjectWorld <|-- Effect
Scene <|-- SceneMain

' ============================================================================
' 关联关系
' ============================================================================

Game *-- Scene : m_current_scene
Game *-- AssetStore : m_asset_store
Scene o-- ObjectScreen : m_children_screen
Scene o-- ObjectWorld : m_children_world
Object *-- Object : m_children
ObjectAffiliate o-- ObjectScreen : m_parent
ObjectWorld *-- Collider : m_collider
Entity o-- States : m_states
Player o-- SpriteAnim : sprite_idle, sprite_move
Player o-- SpriteAnim : sprite_move
Enemy o-- Player : m_target_player
Enemy o-- SpriteAnim : m_current_anim, m_anim_normal, m_anim_hurt, m_anim_die
Effect o-- SpriteAnim : m_sprite_anim
Effect o-- ObjectWorld : m_next_object
SceneMain o-- Player : m_player
Sprite o-- Texture : m_texture

' ============================================================================
' 依赖关系
' ============================================================================

SceneMain ..> Player
SceneMain ..> SpriteAnim
States ..> Entity

@enduml
